# rotate-c

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  build.zig  gmon.out  output.org  project.4coder
src/: compile.c  file.c  log.c  main.c  test.zig
src/fe/: errmsgs.h  lexer.c  lexer.h  parser.c  parser.h  token.c  token.h  type.c  type.h
src/include/: arraylist.h  common.h  compile.h  defines.h  file.h  log.h  macros.h  mem.h
src/utl/: common.c
test/: 001_hello.vr  002_var.vr  003_comments.vr  004_func.vr  006_if.vr
